# mycodeeval

./: README.md
00_c_readbuf/: CMakeLists.txt  drmem.bat  main.c
03_glue/: generate.js  main.js  main_BKP_20160129.js  main_BKP_20160201.js  main_REL_20160129.js  test_input_init.txt  test_input_init_case1.txt  test_input_short.txt  test_output.txt
04_cglue/: CMakeLists.txt  drmem.bat  drmem_rel.bat  main.c  main_bkp_20160201.c  main_bkp_20160209.c  test_input.txt  test_input_full.txt  test_input_short.txt  test_input_simple.txt
05_sort_matrix/: main.js  main_bkp_20160210.js  test_input_big.txt  test_input_reversed.txt
06_csortcols/: 06_csortcols.bat  CMakeLists.txt  drmem.bat  main.c  test_input_starter.txt
07_js_meet_comb_sort/: main.js
08_c_meet_comb_sort/: CMakeLists.txt  drmem.bat  main.c  main_bkp_readlines_snippet.c
09_c_code_like_huffman/: CMakeLists.txt  drmem.bat  huffman.c  huffman.h  macrodef.h  main.c  readbuf.c  readbuf.h
15_fizz_buzz/: CMakeLists.txt  challenge.c  challenge.h  codeeval_assembly.bat  codeeval_assembly.c  drmem.bat  macrodef.h  main.c  readbuf.c  readbuf.h  test_input_real.txt
15_fizz_buzz/drmem/: resfile.6912
15_fizz_buzz/drmem/DrMemory-15_fizz_buzz.exe.3172.000/: potential_errors.txt  results.txt  suppress.txt
15_fizz_buzz/drmem/DrMemory-15_fizz_buzz.exe.3660.000/: potential_errors.txt  results.txt  suppress.txt
15_fizz_buzz/drmem/DrMemory-15_fizz_buzz.exe.6300.000/: potential_errors.txt  results.txt  suppress.txt
15_fizz_buzz/drmem/symcache/: 15_fizz_buzz.exe.txt  KERNEL32.dll.txt  ntdll.dll.txt
(+145 files in other folders)
